samples/_failures_safe/1761324980_2d6259_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13b8232f.c: In function ‘main’:
./samples/SAFE/__tmp_13b8232f.c:153:5: error: expected expression at end of input
  153 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_13b8232f.c:153:5: error: expected declaration or statement at end of input
